--- a/layouts/partials/widget_page.html
+++ b/layouts/partials/widget_page.html
@@ -6,7 +6,7 @@
 {{ if .IsHome }}
   {{ $page = "/home" }}
 {{ else }}
-  {{ $page = .File.Path }}
+  {{ $page = .File.File.Path }}
 {{ end }}
 {{ $headless_bundle := site.GetPage $page }}
 {{/* Check homepage exists */}}
@@ -55,7 +55,7 @@
   {{ end }}
 
   {{/* Fix Hugo's ContentBaseName returning wrong file base name when page section is within a bundle. */}}
-  {{ $hash_id := replace $st.File.ContentBaseName "index" (path.Base (path.Split .Path).Dir) }}
+  {{ $hash_id := replace $st.File.ContentBaseName "index" (path.Base .File.Dir) }}
 
   {{ $widget := or $st.Params.widget "blank" }}
   {{ if eq $widget "custom" }}{{ $widget = "blank" }}{{ end }}{{/* Support legacy Custom widget */}}
